--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "express": "3.2.6",
-    "jade": "*",
-    "websocket": "*",
-    "stompjs": "*"
+    "jade": "1.3.1",
+    "websocket": "1.0.8",
+    "stompjs": "2.3.3"
   }
 }
